<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_description"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/expenseDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/e_g_lunch_groceries"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/expenseAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/e_g_50_0"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />
            <!--android:inputType="number"-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_by"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/paidBySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/saveExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_expense"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
